--- a/blogs/informal essay/2022-3-20.md
+++ b/blogs/informal essay/2022-3-20.md
@@ -1,7 +1,7 @@
 ---
 title: 随笔
 date: 2022-3-20
-cover: https://imgtu.com/i/qns2ut
+cover: https://s1.ax1x.com/2022/03/21/qns2ut.png
 tags:
  - else
 categories:
