--- a/blogs/study/关于博客搭建.md
+++ b/blogs/study/关于博客搭建.md
@@ -6,10 +6,13 @@ tags:
  - 学习
 categories:
  - 学习
+sticky: 1
 ---
 # 关于博客的搭建
 
-博客搭建花了我一个周末，最后能成功感觉有很大的运气成分。
+博客搭建花了我一个周末，见识了数不清的报错，最后能成功感觉有很大的运气成分。
+
+<img src="https://s1.ax1x.com/2022/03/23/q1vn9x.jpg" width = "200" height = "200">
 
 我一开始用的是主题的默认样式，虽然默认样式也很简洁美观，但是我想搞一些更个性化的东西。
 
